# django-djaesy

./: .gitignore  MANIFEST.in  README.rst  boot_django.py  makemigrations.py  manage.py  migrate.py  requirements.txt  setup.cfg  setup.py  tests.py
djaesy/: __init__.py  apps.py  autocomplete.py  base_models.py  base_views.py  decorators.py  fields.py  forms.py  geos.py  layouts.py  login_views.py  menu.py  menus.old.py  menus.py  middleware.py  models.py  permission.py  permissions.py  start_project.py  table_formatters.py  tests.py  urls.py  utils.py  views.py  widgets.py
djaesy/actions/: forms.py  views.py
djaesy/autocomplete/: combo.py  widgets.py
djaesy/core/: models.py
djaesy/core/views/: base.py  crud.py  details.py  form.py  list.py  map.py  model.py  table.py
djaesy/cropimage/: models.py
djaesy/language/: views.py
djaesy/management/commands/: djaesy_admin.py  djaesy_install.py  webpack_build.py  webpack_dev.py  webpack_install.py
djaesy/menus/: app.py  engine.py
djaesy/menus_pkg/: app.py
djaesy/migrations/: 0001_initial.py  0002_user_user_type.py
djaesy/security/: forms.py  layouts.py  login_views.py  models.py  permission.py  views.py
djaesy/static/: djaesy.js  index.html  main.css
djaesy/static/geoman-field/: geoman-field.js  geoman-field.min.js  leaflet-geoman.css
djaesy/tables/: formatters.py
djaesy/tabs/: views.py
djaesy/templates/bootstrap4/: errors.html  field.html  whole_uni_form.html
djaesy/templates/djaesy/: base.html  base2.html  base_form.html  base_split_horizontal.html  reset-password-complete.html  reset-password-confirm.html  reset-password-done.html  reset-password.html  test_form.html
djaesy/templates/djaesy/crud/: create.html  form.html  leaflet_create.html  leaflet_update.html  list.html  update.html
djaesy/templates/djaesy/dashboard/: dashboard.html
djaesy/templates/djaesy/includes/: filter.html  render_form.html  render_formset.html
djaesy/templates/djaesy/login/: central-content.html  login-base.html  login.html
djaesy/templates/djaesy/map/: map-test.html
djaesy/templates/djaesy/menus/: breadcrumb-item.html  breadcrumb.html  main-menu.html  main-submenu.html  mobile-menu.html  (+1 more)
djaesy/templates/theme/: .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
djaesy/templatetags/: app_panel.py  list_view.py  menu.py
djaesy/webpack/: package-lock.json  package.json  webpack.config.js
djaesy/webpack/app/: adminlte.js  autoselect.js  datetime.js  event_notification.js  form_helpers.js  main.js  multiselectbox.js  select2_init.js  theme.js  translation.js  tree-table.js  vehicle_datatable.js  vehicle_event.js  vehicle_map.js
djaesy/webpack/select2/: select2.full.js
sample_project/: .gitignore  requirements.txt  run-daphne.sh  run-django.sh  run-mongo-monitor.sh  run-send-notifications.sh  settings_dev_template.py  settings_production.py  settings_staging.py  test_database.py
sample_project/sample_project/: all_permissions.py  asgi.py  mongo.py  nominatim.py  permissions.py  routing.py  settings.py  urls.py  wsgi.py
sample_project/sandbox/: __init__.py  api.py  consumers.py  menus.py  models.py  routing.py  urls.py  views.py
sample_project/sandbox/migrations/: 0001_initial.py  0002_auto_20200624_2221.py
(+104 files in other folders)
