[metadata]
name = django-djaesy
version = 0.0.1
description = Tool for easy application building with Django
long_description = file:README.rst
url = https://github.com/gustavo80br/django-djaesy
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires = 
    setuptools >= 38.3.0
install_requires =
    Django==3.2.4
    django-localflavor==2.2
    django-autocomplete-light==3.5.0
    django-crum==0.7.5
    django-crispy-forms==1.8.1
    django-filter==2.2.0
    django-image-cropping==1.3.0
    django_countries==5.5
    django_polymorphic==2.1.2
    django-stubs
    django_leaflet==0.26.0
    djangorestframework
    djangorestframework-stubs
    django-cleanup
    simplejson
    orjson
    django-geojson
    django-chartjs
    pandas==1.0.0
    jinja2==2.11.1
    openpyxl==3.0.3
    xlwt==1.3.0
    xlsxwriter
    easy_thumbnails==2.7
    requests
    pytz
    whitenoise[brotli]
    markdown
test_suite = tests.get_suite
