[metadata]
name = django-djaesy
version = 0.1.0
description = Tool for easy application building with Django
long_description = file:README.rst
url = https://github.com/gustavo80br/django-djaesy
author= Gustavo Gonçalves
author_email = gustavo@gemtech.net.br
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.8
zip_safe = false
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django==3.2.5
    django-localflavor==3.1
    django-autocomplete-light==3.8.2
    django-crum==0.7.9
    django-crispy-forms==1.12.0
    django-filter==2.4.0
    django-image-cropping==1.5.0
    django_countries==7.2.1
    django_polymorphic==3.0.0
    django-stubs==1.8.0
    django_leaflet==0.28.1
    djangorestframework==3.12.4
    djangorestframework-stubs==1.4.0
    django-cleanup==5.2.0
    simplejson==3.17.3
    orjson==3.6.0
    django-geojson==3.2.0
    django-chartjs==2.2.1
    pandas==1.3.1
    jinja2==3.0.1
    openpyxl==3.0.7
    xlwt==1.3.0
    xlsxwriter==1.4.5
    easy_thumbnails==2.7.1
    requests==2.26.0
    pytz==2021.1
    whitenoise[brotli]==5.3.0
    markdown==3.3.4
test_suite = tests.get_suite

[options.entry_points]
console_scripts =
    djaesy-admin = djaesy.management.commands.djaesy_admin:main
